objects/Page_Section_Content__c.object
<CustomObject>
    <fields>
        <fullName>AppPageSection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>AppPageSection</label>
        <referenceTo>AppPageSection__c</referenceTo>
        <relationshipLabel>Page Section Contents</relationshipLabel>
        <relationshipName>Page_Section_Contents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Button_Text__c</fullName>
        <label>Button Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heading__c</fullName>
        <label>Heading</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Icon_Name__c</fullName>
        <label>Icon Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Size__c</fullName>
        <label>Icon Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Persona</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Heading__c</fullName>
        <label>Sub Heading</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <label>Page Section Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AppPageSection__c</columns>
        <columns>Heading__c</columns>
        <columns>Button_Text__c</columns>
        <columns>Description__c</columns>
        <columns>Icon_Name__c</columns>
        <columns>Icon_Size__c</columns>
        <columns>Sub_Heading__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Section Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>